--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "gulp": "^3.8.6",
     "gulp-concat": "^2.3.4",
     "gulp-minify-css": "^0.3.7",
+    "gulp-minify-html": "^0.1.4",
     "gulp-processhtml": "0.0.4",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.4.0",
