--- a/source/Gemfile
+++ b/source/Gemfile
@@ -1,5 +1,6 @@
 source "https://rubygems.org"
 
+gem "jekyll", "~>2.2"
 gem "sass", "~>3.3"
 gem "compass", "~>1.0.0.alpha.20"
 gem "breakpoint", "~>2.4"
