--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "devDependencies": {
     "gulp": "^3.8.6",
+    "gulp-cleanhtml": "0.0.2",
     "gulp-concat": "^2.3.4",
     "gulp-minify-css": "^0.3.7",
     "gulp-minify-html": "^0.1.4",
