--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "gulp-cleanhtml": "0.0.2",
     "gulp-concat": "^2.3.4",
     "gulp-minify-css": "^0.3.7",
-    "gulp-minify-html": "^0.1.4",
     "gulp-processhtml": "0.0.4",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.4.0",
@@ -14,6 +13,7 @@
     "gulp-strip-debug": "^0.3.0",
     "gulp-uglify": "^0.3.1",
     "gulp-uncss": "^0.4.5",
-    "gulp-util": "^3.0.0"
+    "gulp-util": "^3.0.0",
+    "merge-stream": "^0.1.5"
   }
 }
