Build system refactor:
- Jekyll templating is done through gulp.js
- CSS/SASS/Compass is compiled through gulp.js

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "author": "Albert Yu <albert@albertyu.co>",
   "private": true,
   "devDependencies": {
+    "browserify": "^5.9.3",
     "browsernizr": "^1.0.2",
     "gulp": "^3.8.6",
     "gulp-cleanhtml": "0.0.2",
@@ -11,15 +12,9 @@
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.4.0",
     "gulp-rimraf": "^0.1.0",
+    "gulp-ruby-sass": "^0.7.1",
     "gulp-strip-debug": "^0.3.0",
     "gulp-uglify": "^0.3.1",
-    "gulp-uncss": "^0.4.5",
-    "gulp-util": "^3.0.0",
-    "merge-stream": "^0.1.5",
-    "viewport-units-buggyfill": "^0.3.1",
     "vinyl-source-stream": "^0.1.1"
-  },
-  "dependencies": {
-    "browserify": "^5.9.3"
   }
 }
