--- a/package.json
+++ b/package.json
@@ -4,17 +4,30 @@
   "devDependencies": {
     "browserify": "^5.9.3",
     "browsernizr": "^1.0.2",
+    "exorcist": "^0.1.6",
+    "filesize": "^2.0.3",
     "gulp": "^3.8.6",
     "gulp-cleanhtml": "0.0.2",
+    "gulp-compass": "^1.2.0",
     "gulp-concat": "^2.3.4",
+    "gulp-filesize": "0.0.6",
     "gulp-minify-css": "^0.3.7",
     "gulp-processhtml": "0.0.4",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.4.0",
     "gulp-rimraf": "^0.1.0",
     "gulp-ruby-sass": "^0.7.1",
+    "gulp-streamify": "0.0.5",
     "gulp-strip-debug": "^0.3.0",
     "gulp-uglify": "^0.3.1",
-    "vinyl-source-stream": "^0.1.1"
+    "gulp-util": "^3.0.0",
+    "map-stream": "^0.1.0",
+    "pretty-hrtime": "^0.2.1",
+    "require-dir": "^0.1.0",
+    "run-sequence": "^0.3.6",
+    "vinyl-source-stream": "^0.1.1",
+    "vinyl-transform": "0.0.1",
+    "watchify": "^1.0.2",
+    "yargs": "^1.3.1"
   }
 }
