--- a/source/_config.yml
+++ b/source/_config.yml
@@ -6,13 +6,14 @@ encoding: utf-8
 # port: 4000
 include: [
   '*.scss',
-  '*.css.map'
+  '*.css.map',
+  'js/dist/'
 ]
 exclude: [
   'Gemfile*',
   # 'css/',
   # 'sass/',
-  # 'js/',
+  'js/src/',
   '**/*.svg'
   # 'assets/svg/*'
 ]
