:construction: docker compose

--- a/.github/workflows/ecr-linode.yml
+++ b/.github/workflows/ecr-linode.yml
@@ -1,4 +1,4 @@
-name: ECR+Linode
+name: ECR + Linode Deployment
 
 on:
   push:
@@ -9,9 +9,6 @@ env:
   AWS_REGION: us-east-1
   ECR_REPOSITORY: albertyu.co
   ECR_PUBLIC_REGISTRY: public.ecr.aws/a2k4l4h2
-  # ECS_SERVICE: ecs-service
-  # ECS_CLUSTER: ecs-cluster
-  # ECS_TASK_DEFINITION: ecs-task-definition.json
   CONTAINER_NAME: app
 
 jobs:
@@ -50,6 +47,16 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output    name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
+      - name: Manually upload docker-compose.yml to Linode
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SSH_DEPLOY_HOST }}
+          username: ${{ secrets.SSH_DEPLOY_USER }}
+          key: ${{ secrets.SSH_DEPLOY_KEY }}
+          passphrase: ${{ secrets.SSH_DEPLOY_KEY_PASSPHRASE }}
+          source: "./.dockerignore, ./docker-compose.yml, ./Dockerfile, ./package.json, ./package-lock.json"
+          target: "/home/${{ secrets.SSH_DEPLOY_USER }}"
+
       - name: Deploy via SSH
         uses: appleboy/ssh-action@master
         env:
@@ -71,26 +78,6 @@ jobs:
                 echo "$CONTAINER_NAME already running with id $container_id, stopping now ..."
                 docker stop "$container_id"
             fi
-            docker run --rm -p 80:3000 -d --name=$CONTAINER_NAME $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+            docker-compose up -d
+            docker-compose ps -a
             echo "Bye ~"
-
-      # - name: Check task definition
-      #   run: |
-      #     aws ecs describe-task-definition --task-definition app \
-      #     --query taskDefinition > ecs-task-definition.json
-
-      # - name: Fill in the new image ID in the Amazon ECS task definition
-      #   id: update-task-def
-      #   uses: aws-actions/amazon-ecs-render-task-definition@v1
-      #   with:
-      #     task-definition: ${{ env.ECS_TASK_DEFINITION }}
-      #     container-name: ${{ env.CONTAINER_NAME }}
-      #     image: ${{ steps.build-and-push-image.outputs.image }}
-
-      # - name: Deploy Amazon ECS task definition
-      #   uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-      #   with:
-      #     task-definition: ${{ steps.update-task-def.outputs.task-definition }}
-      #     service: ${{ env.ECS_SERVICE }}
-      #     cluster: ${{ env.ECS_CLUSTER }}
-      #     wait-for-service-stability: true
