--- a/.github/workflows/ecr-linode.yml
+++ b/.github/workflows/ecr-linode.yml
@@ -54,7 +54,7 @@ jobs:
           username: ${{ secrets.SSH_DEPLOY_USER }}
           key: ${{ secrets.SSH_DEPLOY_KEY }}
           passphrase: ${{ secrets.SSH_DEPLOY_KEY_PASSPHRASE }}
-          source: "./.dockerignore, ./docker-compose.yml, ./Dockerfile, ./package.json, ./package-lock.json"
+          source: "./.dockerignore, ./docker-compose.yml, ./Dockerfile, ./nginx/*, ./cloudflare/*, ./package.json, ./package-lock.json"
           target: "/home/${{ secrets.SSH_DEPLOY_USER }}"
 
       - name: Deploy via SSH
@@ -62,12 +62,13 @@ jobs:
         env:
           ECR_REGISTRY: ${{ env.ECR_PUBLIC_REGISTRY }}
           IMAGE_TAG: ${{ steps.get-short-sha.outputs.short_sha }}
+          CLOUDFLARE_DNS_API_TOKEN: ${{ secrets.CLOUDFLARE_DNS_API_TOKEN }}
         with:
           host: ${{ secrets.SSH_DEPLOY_HOST }}
           username: ${{ secrets.SSH_DEPLOY_USER }}
           key: ${{ secrets.SSH_DEPLOY_KEY }}
           passphrase: ${{ secrets.SSH_DEPLOY_KEY_PASSPHRASE }}
-          envs: ECR_REGISTRY,ECR_REPOSITORY,IMAGE_TAG,CONTAINER_NAME
+          envs: ECR_REGISTRY,ECR_REPOSITORY,IMAGE_TAG,CONTAINER_NAME,CLOUDFLARE_DNS_API_TOKEN
           script: |
             echo "Starting deploy..."
             docker images
@@ -78,6 +79,17 @@ jobs:
                 echo "$CONTAINER_NAME already running with id $container_id, stopping now ..."
                 docker stop "$container_id"
             fi
-            docker-compose up -d
+            rm .env
+            touch .env
+            echo "ECR_REGISTRY=$ECR_REGISTRY" >> ./.env
+            echo "ECR_REPOSITORY=$ECR_REPOSITORY" >> ./.env
+            echo "IMAGE_TAG=$IMAGE_TAG" >> ./.env
+            echo "wrote env file:"
+            cat .env
+            curl https://ssl-config.mozilla.org/ffdhe2048.txt > ./nginx/dhparam
+            echo "dns_cloudflare_api_token = $CLOUDFLARE_DNS_API_TOKEN" >> ./cloudflare/credentials
+            chmod go-r ./cloudflare/credentials
+            docker container prune -f
+            docker-compose --env-file ./.env up -d
             docker-compose ps -a
             echo "Bye ~"
