--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -1,3 +1,15 @@
+# TODO: block direct ip access
+# https://serverfault.com/questions/794953/block-direct-access-to-webserver-ip-via-https
+#
+# server {
+#   listen 443 ssl http2 default_server;
+#   listen [::]:443 ssl http2 default_server;
+#   server_name "";
+#   ssl_certificate /path/to/self_signed_cert
+#   ssl_certificate_key /path/to/self_signed_cert_key
+#   return 444;
+# }
+
 server {
   listen 80;
   listen [::]:80;
@@ -37,6 +49,11 @@ server {
   ssl_stapling_verify on;
 
   location / {
+    try_files $uri @nextjs;
+  }
+
+  location @nextjs {
     proxy_pass http://nextjs:3000;
+    #add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:" always;
   }
 }
