--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -1,14 +1,5 @@
 # TODO: block direct ip access
 # https://serverfault.com/questions/794953/block-direct-access-to-webserver-ip-via-https
-#
-# server {
-#   listen 443 ssl http2 default_server;
-#   listen [::]:443 ssl http2 default_server;
-#   server_name "";
-#   ssl_certificate /path/to/self_signed_cert
-#   ssl_certificate_key /path/to/self_signed_cert_key
-#   return 444;
-# }
 
 server {
   listen 80;
@@ -17,6 +8,15 @@ server {
   location / {
     return 301 https://$host$request_uri;
   }
+}
+
+server {
+  listen 443 default_server;
+  listen [::]:443 default_server;
+  ssl_reject_handshake on;
+
+  server_name _;
+  return 444;
 }
 
 server {
