:construction: setup theme-ui

--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint '**/*{.js,jsx,ts,tsx}'"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@mdx-js/react": "^1.6.22",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "theme-ui": "^0.14.5"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.2.1",
