:sparkles: landing page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "baseUrl": ".",
     "paths": {
       "assets/*": ["assets/*"],
+      "components/*": ["components/*"],
     },
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
