--- a/.github/workflows/ecr-linode.yml
+++ b/.github/workflows/ecr-linode.yml
@@ -43,7 +43,7 @@ jobs:
           ECR_REGISTRY: ${{ env.ECR_PUBLIC_REGISTRY }}
           IMAGE_TAG: ${{ steps.get-short-sha.outputs.short_sha }}
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --build-arg IMAGE_TAG_V=$IMAGE_TAG .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --build-arg IMAGE_TAG=$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output    name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
