:construction_worker: improve deployment flow

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,8 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# local env files
+# env files
+.env
 .env*.local
 
 # vercel
@@ -42,3 +43,8 @@ yarn-error.log*
 # Sublime Text
 *.sublime-workspace
 *.sublime-project
+
+#
+/cloudflare/
+/nginx/dhparam
+/nginx/localhost/
