--- a/.github/workflows/ecr-linode.yml
+++ b/.github/workflows/ecr-linode.yml
@@ -12,10 +12,12 @@ env:
   CONTAINER_NAME: app
 
 jobs:
-  build-and-deploy:
-    name: Build and Deploy
+  build:
+    name: Build
     runs-on: ubuntu-22.04
-    environment: testing
+
+    outputs:
+      image-tag: ${{ steps.get-short-sha.outputs.short_sha }}
 
     steps:
       - name: Checkout
@@ -47,21 +49,19 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output    name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
-      - name: Manually scp some files to Linode
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.SSH_DEPLOY_HOST }}
-          username: ${{ secrets.SSH_DEPLOY_USER }}
-          key: ${{ secrets.SSH_DEPLOY_KEY }}
-          passphrase: ${{ secrets.SSH_DEPLOY_KEY_PASSPHRASE }}
-          source: "./.dockerignore, ./docker-compose.yml, ./Dockerfile, ./nginx/*, ./cloudflare/*, ./package.json, ./package-lock.json"
-          target: "/home/${{ secrets.SSH_DEPLOY_USER }}"
+  deploy-testing:
+    name: Deploy (Testing)
+    if: github.ref_name == 'develop'
+    environment: testing
+    needs: build
+    runs-on: ubuntu-22.04
 
-      - name: SSH into Linode to docker-compose up
+    steps:
+      - name: ssh into Linode and deploy testing
         uses: appleboy/ssh-action@master
         env:
           ECR_REGISTRY: ${{ env.ECR_PUBLIC_REGISTRY }}
-          IMAGE_TAG: ${{ steps.get-short-sha.outputs.short_sha }}
+          IMAGE_TAG: ${{ needs.build.outputs.image-tag }}
           CLOUDFLARE_DNS_API_TOKEN: ${{ secrets.CLOUDFLARE_DNS_API_TOKEN }}
         with:
           host: ${{ secrets.SSH_DEPLOY_HOST }}
@@ -70,7 +70,23 @@ jobs:
           passphrase: ${{ secrets.SSH_DEPLOY_KEY_PASSPHRASE }}
           envs: ECR_REGISTRY,ECR_REPOSITORY,IMAGE_TAG,CONTAINER_NAME,CLOUDFLARE_DNS_API_TOKEN
           script: |
-            echo "Starting deploy..."
+            echo "deploying version: $IMAGE_TAG"
+            mkdir -p ./${{ env.CONTAINER_NAME }}
+            cd ${{ env.CONTAINER_NAME }}
+            git check-ignore -q . 2>/dev/null; if [ "$?" -ne "1" ]; then
+              echo "git not initialized"
+              git init
+              git remote add upstream https://github.com/${{ github.repository }}
+              git fetch -p upstream
+              git reset --hard upstream/develop
+              git checkout develop
+              git pull --rebase upstream develop
+            else
+              git remote -v
+              git branch -a
+              git status
+            fi
+
             docker pull --quiet $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
             echo > .env
             cat <<EOF > .env
@@ -79,7 +95,11 @@ jobs:
             IMAGE_TAG=$IMAGE_TAG
             EOF
             curl https://ssl-config.mozilla.org/ffdhe2048.txt > ./nginx/dhparam
-            echo "dns_cloudflare_api_token = $CLOUDFLARE_DNS_API_TOKEN" >> ./cloudflare/credentials
+            if [ ! -f ./cloudflare/credentials ]; then
+              mkdir cloudflare
+              touch ./cloudflare/credentials
+            fi
+            echo "dns_cloudflare_api_token = $CLOUDFLARE_DNS_API_TOKEN" > ./cloudflare/credentials
             chmod go-r ./cloudflare/credentials
             mkdir -p ./nginx/localhost
             openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout ./nginx/localhost/localhost.key -out ./nginx/localhost/localhost.crt -subj "/CN=localhost"
