--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.2.1",
-    "@types/node": "17.0.40",
-    "@types/react": "18.0.13",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
     "@types/react-dom": "18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
-    "eslint": "8.17.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.2",
     "prettier": "^2.7.1",
-    "typescript": "4.7.3"
+    "typescript": "4.7.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
