--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -50,4 +50,4 @@ jobs:
                 docker stop $CONTAINER_NAME;
               fi
             fi
-            docker run --detach --interactive --rm --tty --name $CONTAINER_NAME -p 80:3000 public.ecr.aws/a2k4l4h2/albertyu.co:$IMAGE_TAG
+            docker run --detach --interactive --rm --tty --name $CONTAINER_NAME --env APP_ENV=$ENVIRONMENT -p 80:3000 public.ecr.aws/a2k4l4h2/albertyu.co:$IMAGE_TAG
