--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@mdx-js/react": "^1.6.22",
+    "@theme-ui/color": "^0.14.6",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
