--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint '**/*{.js,jsx,ts,tsx}'",
+    "tsc": "tsc",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -20,12 +21,12 @@
     "theme-ui": "^0.14.6"
   },
   "devDependencies": {
-    "@svgr/webpack": "^6.2.1",
+    "@svgr/webpack": "^6.3.0",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "csstype": "^3.1.0",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
