--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.0",
+    "@emotion/react": "^11.11.1",
     "@mdx-js/react": "^1.6.22",
-    "@theme-ui/color": "^0.14.7",
-    "next": "12.2.3",
+    "@theme-ui/color": "^0.16.0",
+    "next": "^13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "theme-ui": "^0.14.7"
+    "theme-ui": "^0.16.0"
   },
   "devDependencies": {
-    "@svgr/webpack": "^6.3.1",
-    "@types/node": "^18.6.3",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
-    "csstype": "^3.1.0",
-    "eslint": "8.21.0",
-    "eslint-config-next": "12.2.3",
-    "eslint-config-prettier": "^8.5.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "typescript": "4.7.4"
+    "@svgr/webpack": "^8.0.1",
+    "@types/node": "^20.3.2",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "csstype": "^3.1.2",
+    "eslint": "8.43.0",
+    "eslint-config-next": "^13.4.7",
+    "eslint-config-prettier": "^8.8.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
+    "prettier": "^2.8.8",
+    "typescript": "^5.1.5"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
